--- a/VCCS.Portal/ClientApp/src/app/pages/vccs-tf/vccs-tf.component.css
+++ b/VCCS.Portal/ClientApp/src/app/pages/vccs-tf/vccs-tf.component.css
@@ -162,3 +162,15 @@
   font-size: 22px;
   font-weight: bold;
 }
+
+.signal {
+  font-size: larger;
+
+  .active {
+    color: #438b47;
+  }
+
+  .inactive {
+    color: #eb4040;
+  }
+}
